# cplus

doubleFree/: .gitignore  CMakeLists.txt
doubleFree/include/: api1.hpp  api2.hpp  common.hpp  test.hpp
doubleFree/src/: api1.cpp  api2.cpp  common.cpp  mainTest1.cpp  mainTest2.cpp  test.cpp
leon_cpp/: CMakeLists.txt  imageProcess.hpp  main.cpp
leon_cpp/src/: any.cpp  boostFileSystem.cpp  cast.cpp  copyElision.cpp  map.cpp  memberReference.cpp  passByReference.cpp  ploymorphism.cpp  templateCallback.cpp  virtual_destructor.cpp  virtual_func_call.cpp
leon_cpp/src/boost/: AnyImpl.cpp  CMakeLists.txt
leon_cpp/src/c11/: CMakeLists.txt  emplace.cpp  rvalue.cpp
leon_cpp/src/opencv/: candy.cpp  contours.cpp  dilate_erode.cpp  drawContours.cpp  filter.cpp  floodFill.cpp  houghlines.cpp  laplacian.cpp  line.cpp  remap.cpp  rotate.cpp  rotate_test.cpp  scharr.cpp  surfDetector.cpp  trackBar.cpp  warpAffine.cpp
